--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.7",
     "next": "14.2.3",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
